@@ -18,8 +18,11 @@ Legend:
 * Updated ZenLib to v0.4.27
 * Updated FFmpeg (git 6fef82f)
 * Updated Czech, Russian, Ukrainian, Basque and Polish translations
+* Ticket #2227, Hide the seek bar in capture mode
 ! The hand cursor wasn't shown in the web links in Keys and WebServer options page
 ! Toolbar code cleanup and background fix for Windows XP
+! Ticket #504, Fixed rounding errors that prevented a properly centered image
+  and caused unneeded resizing because the video size was off by one
 ! Ticket #2330, Fix the radio buttons in the Logo options page
 ! Ticket #2349, Recent Files: "Clear List" did not remove all files from the list
 ! Ticket #2356, The "With icons" and "File(s)" options in the Formats options page
@@ -29,5 +32,3 @@ Legend:
     - Fix the parsing of the characters' encoding
     - Fix the display of the start and end time when DST is observed
 ! Ticket #2365, The volume slider wasn't properly redrawn in some cases
-! Ticket #504, Fixed rounding errors that prevented a properly centered image
-! Fixed off by one in video size which caused unneeded resizing
